k8s/timetable-api-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timetable-api-depl
spec:
  selector:
    matchLabels:
      app: timetable-api
  template:
    metadata:
      labels:
        app: timetable-api
    spec:
      containers:
      - name: timetable-api
        image: thetkpark/cs-timetable-api
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 4000
