k8s/cscms-url-shortener-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aka-cscms-depl
spec:
  selector:
    matchLabels:
      app: aka-cscms
  template:
    metadata:
      labels:
        app: aka-cscms
    spec:
      containers:
      - name: aka-cscms
        image: thetkpark/cscms-url-shortener
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3050
        
---
apiVersion: v1
kind: Service
metadata:
  name: aka-cscms-srv
spec:
  selector:
    app: aka-cscms
  ports:
  - port: 3050
    targetPort: 3050
    name: web
    protocol: TCP
