k8s/grafana-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-srv
spec:
  type: ExternalName
  externalName: prometheus-grafana.monitoring.svc.cluster.local
