k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  tls:
    - hosts: 
      - aka-test.cscms.me
      - timetable.cscms.me
      - tmp.cscms.me
      - test.cscms.me
      - monitor.cscms.me
      secretName: cscms-tls
    - hosts:
      - blog.sethanantp.com
      secretName: sethanantp-tls
  rules:
    - host: test.cscms.me
      http:
        paths:
        - pathType: Prefix
          path: /?(.*)
          backend:
            service:
              name: oj-backend-srv
              port: 
                number: 8000
    - host: aka-test.cscms.me
      http:
        paths:
        - pathType: Prefix
          path: /?(.*)
          backend:
            service:
              name: aka-cscms-srv
              port: 
                number: 3050
    - host: timetable.cscms.me
      http:
        paths:
        - pathType: Prefix
          path: /api?(.*)
          backend:
            service:
              name: timetable-api-srv
              port: 
                number: 4000
        - pathType: Prefix
          path: /?(.*)
          backend:
            service:
              name: timetable-client-srv
              port: 
                number: 80
    - host: tmp.cscms.me
      http:
        paths:
        - pathType: Prefix
          path: /?(.*)
          backend:
            service:
              name: temp-storage-srv
              port: 
                number: 5000
    - host: monitor.cscms.me
      http:
        paths:
        - pathType: Prefix
          path: /?(.*)
          backend:
            service:
              name: grafana-srv
              port: 
                number: 80
    - host: blog.sethanantp.com
      http:
        paths:
        - pathType: Prefix
          path: /?(.*)
          backend:
            service:
              name: blog-ghost-srv
              port: 
                number: 2368
